Found a better way to solve the scrollbar problem

--- a/public/scss/base.scss
+++ b/public/scss/base.scss
@@ -14,17 +14,5 @@ body {
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
 
-    overflow-y: hidden;
-}
-
-main {
-    width: 100%;
-    height: 100%;
-    max-height: 100vh;
-
-    position: absolute;
-    top: 0;
-    box-sizing: border-box;
-
-    padding-top: 3.2rem;
+    overflow-y: scroll;
 }
